--- a/TestDrivenDevelopment/tdd-practice/pom.xml
+++ b/TestDrivenDevelopment/tdd-practice/pom.xml
@@ -3,6 +3,10 @@
   <groupId>tdd-practice</groupId>
   <artifactId>tdd-practice</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+    <properties>
+  <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
   <!-- https://mvnrepository.com/artifact/junit/junit -->
 <dependencies>
 <dependency>
